# ExerciseScenarioGenerator

./: .gitignore  Backend test.ipynb  Ingestor Test.ipynb  Mistral_v3.ipynb  activate_env.sh  pyproject.toml  requirements.txt  run_notebook.sh
backend/: constants.py  load_prompts.py  user_actions.py
data/: Andrang_Schutzsuchender_Auswirkungen.md  Andrang_Schutzsuchender_Einflussfaktoren.md  Andrang_Schutzsuchender_Ereignisbeispiele.md  Andrang_Schutzsuchender_Hilfsmittel.md  Andrang_Schutzsuchender_Massnahmen.md  Andrang_Schutzsuchender_Phasen.md  Andrang_Schutzsuchender_Rechtsgrundlagen.md  Andrang_Schutzsuchender_Rollen.md  Andrang_Schutzsuchender_Schwerestufen.md  Andrang_Schutzsuchender_index.md  Bergsturz_Auswirkungen.md  Bergsturz_Einflussfaktoren.md  Bergsturz_Ereignisbeispiele.md  Bergsturz_Hilfsmittel.md  Bergsturz_Massnahmen.md  Bergsturz_Phasen.md  Bergsturz_Rechtsgrundlagen.md  Bergsturz_Rollen.md  Bergsturz_Schwerestufen.md  Bergsturz_index.md  Bewaffneter_Konflikt_Auswirkungen.md  Bewaffneter_Konflikt_Einflussfaktoren.md  Bewaffneter_Konflikt_Ereignisbeispiele.md  Bewaffneter_Konflikt_Hilfsmittel.md  Bewaffneter_Konflikt_Massnahmen.md  Bewaffneter_Konflikt_Phasen.md  Bewaffneter_Konflikt_Rechtsgrundlagen.md  Bewaffneter_Konflikt_Rollen.md  Bewaffneter_Konflikt_Schwerestufen.md  Bewaffneter_Konflikt_index.md  Biologischer_Anschlag_Auswirkungen.md  Biologischer_Anschlag_Einflussfaktoren.md  Biologischer_Anschlag_Ereignisbeispiele.md  Biologischer_Anschlag_Hilfsmittel.md  Biologischer_Anschlag_Massnahmen.md  Biologischer_Anschlag_Phasen.md  (+406 more)
frontend/: app.py
(+72 files in other folders)
